--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,87 @@
-{% extends "base.html" %}
-{% block title %} Home Page {% endblock title%}
-{% block content %}
+
+<!DOCTYPE html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        .header {
+            overflow: hidden;
+            background-color: #f1f1f1;
+            padding: 20px 10px;
+        }
+
+        .header a {
+            float: left;
+            color: black;
+            text-align: center;
+            padding: 12px;
+            text-decoration: none;
+            font-size: 18px;
+            line-height: 25px;
+            border-radius: 4px;
+        }
+
+        .header a.logo {
+            font-size: 25px;
+            font-weight: bold;
+        }
+
+        .header a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        .header a.active {
+            background-color: dodgerblue;
+            color: white;
+        }
+
+        .header-right {
+            float: right;
+        }
+
+        @media screen and (max-width: 500px) {
+            .header a {
+                float: none;
+                display: block;
+                text-align: left;
+            }
+
+            .header-right {
+                float: none;
+            }
+        }
+    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"
+        rel="stylesheet">
+</head>
+
+<body>
     <div class="jumbotron">
         <h1 class="display-4">Welcome to the New Lou's List</h1>
+        {% if user.is_authenticated %}
+        <p class="lead">
+            You are logged in as {{user.username}}
+        </p>
+        <hr class="my-4">
+        <a class="btn btn-primary btn-lg" href="{% url 'logout' %}" role="button">Logout</a>
+        <a class="btn btn-primary btn-lg" href="{% url 'users-home' %}" role="button">Home</a>
+        {% else %}
         <p class="lead">
             Please sign in to continue
         </p>
         <hr class="my-4">
-        <p class="lead">
-            {% if user.is_authenticated %}
-                <a class="btn btn-primary btn-lg" href="{% url 'logout' %}" role="button">Logout</a>
-            {% else %}
-                <a class="btn btn-primary btn-lg" href="{% url 'login' %}" role="button">Sign in</a>
-            {% endif %}
+        <a class="btn btn-primary btn-lg" href="{% url 'login' %}" role="button">Sign in</a>
+        {% endif %}
         </p>
     </div>
-
-{% endblock content %}
+</body>
