--- a/templates/home.html
+++ b/templates/home.html
@@ -3,62 +3,57 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        * {
-            box-sizing: border-box;
-        }
+        *{
+  margin:0;
+  padding:0;
+}
 
-        body {
-            margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-        }
+body{
+  margin:0;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size:17px;
+  color:orange;
+  line-height:1.6;
+}
 
-        .header {
-            overflow: hidden;
-            background-color: #f1f1f1;
-            padding: 20px 10px;
-        }
+#showcase{
+  background-image:url('https://img.freepik.com/free-vector/watercolor-back-school-background-with-white-space_52683-41450.jpg?w=2000');
+  background-size:cover;
+  background-position:center;
+  height:100vh;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  padding:0 20px;
+}
 
-        .header a {
-            float: left;
-            color: black;
-            text-align: center;
-            padding: 12px;
-            text-decoration: none;
-            font-size: 18px;
-            line-height: 25px;
-            border-radius: 4px;
-        }
+#showcase h1{
+  font-size:50px;
+  line-height:1.2;
+}
 
-        .header a.logo {
-            font-size: 25px;
-            font-weight: bold;
-        }
+#showcase p{
+  font-size:20px;
+}
 
-        .header a:hover {
-            background-color: #ddd;
-            color: black;
-        }
+#showcase .button{
+  font-size:18px;
+  text-decoration:none;
+  color:black;
+  border:black 1px solid;
+  padding:10px 20px;
+  border-radius:10px;
+  margin-top:20px;
+}
 
-        .header a.active {
-            background-color: dodgerblue;
-            color: white;
-        }
+#showcase .button:hover{
+  background:orange;
+  color:#fff;
+}
 
-        .header-right {
-            float: right;
-        }
 
-        @media screen and (max-width: 500px) {
-            .header a {
-                float: none;
-                display: block;
-                text-align: left;
-            }
-
-            .header-right {
-                float: none;
-            }
-        }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"
@@ -66,24 +61,12 @@
 </head>
 
 <body>
-    <center>
-    <div class="jumbotron">
-        <h1 class="display-4">Welcome to the New Lou's List</h1>
-        {% if user.is_authenticated %}
-        <p class="lead">
-            You are logged in as {{user.username}}
-        </p>
-        <hr class="my-4">
-        <a class="btn btn-primary btn-lg" href="{% url 'logout' %}" role="button">Logout</a>
-        <a class="btn btn-primary btn-lg" href="{% url 'users-home' %}" role="button">Home</a>
-        {% else %}
-        <p class="lead">
-            Please sign in to continue
-        </p>
-        <hr class="my-4">
-        <a class="btn btn-primary btn-lg" href="{% url 'login' %}" role="button">Sign in</a>
-        {% endif %}
-        </p>
-    </div>
-</center>
+    <header id="showcase">
+        <h1>Welcome to The New Lou's List</h1>
+        <p>UVA's best class searcher</p>
+        <div id="container"> 
+            <a href="/login" class="button">Sign In</a>
+            <a href="/register" class="button">Sign Up</a>
+        </div>
+      </header>
 </body>
