--- a/templates/login.html
+++ b/templates/login.html
@@ -1,306 +1,255 @@
 
-<style>
-* {
-	box-sizing: border-box;
-}
-
-body {
-	background: #f6f5f7;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	font-family: 'Montserrat', sans-serif;
-	height: 100vh;
-	margin: -20px 0 50px;
-}
-
-h1 {
-	font-weight: bold;
-	margin: 0;
-}
-
-h2 {
-	text-align: center;
-}
-
-p {
-	font-size: 14px;
-	font-weight: 100;
-	line-height: 20px;
-	letter-spacing: 0.5px;
-	margin: 20px 0 30px;
-}
-
-span {
-	font-size: 12px;
-}
-
-a {
-	color: #333;
-	font-size: 14px;
-	text-decoration: none;
-	margin: 15px 0;
-}
-
-button {
-	border-radius: 20px;
-	border: 1px solid #161515;
-	background-color: #0e0c0c;
-	color: #FFFFFF;
-	font-size: 12px;
-	font-weight: bold;
-	padding: 12px 45px;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	transition: transform 80ms ease-in;
-}
-
-button:active {
-	transform: scale(0.95);
-}
-
-button:focus {
-	outline: none;
-}
-
-button.ghost {
-	background-color: transparent;
-	border-color: #FFFFFF;
-}
-
-form {
-	background-color: #FFFFFF;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	padding: 0 50px;
-	height: 100%;
-	text-align: center;
-}
-
-input {
-	background-color: #eee;
-	border: none;
-	padding: 12px 15px;
-	margin: 8px 0;
-	width: 100%;
-}
-
-.container {
-	background-color: #fff;
-	border-radius: 10px;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-			0 10px 10px rgba(0,0,0,0.22);
-	position: relative;
-	overflow: hidden;
-	width: 768px;
-	max-width: 100%;
-	min-height: 480px;
-}
-
-.form-container {
-	position: absolute;
-	top: 0;
-	height: 100%;
-	transition: all 0.6s ease-in-out;
-}
-
-.sign-in-container {
-	left: 0;
-	width: 50%;
-	z-index: 2;
-}
-
-.container.right-panel-active .sign-in-container {
-	transform: translateX(100%);
-}
-
-.sign-up-container {
-	left: 0;
-	width: 50%;
-	opacity: 0;
-	z-index: 1;
-}
-
-.container.right-panel-active .sign-up-container {
-	transform: translateX(100%);
-	opacity: 1;
-	z-index: 5;
-	animation: show 0.6s;
-}
-
-@keyframes show {
-	0%, 49.99% {
-		opacity: 0;
-		z-index: 1;
+<style>@import url('https://fonts.googleapis.com/css?family=Abel|Abril+Fatface|Alegreya|Arima+Madurai|Dancing+Script|Dosis|Merriweather|Oleo+Script|Overlock|PT+Serif|Pacifico|Playball|Playfair+Display|Share|Unica+One|Vibur');
+	/* End Fonts */
+	/* Start Global rules */
+	* {
+		padding: 0;
+		margin: 0;
+		box-sizing: border-box;
+	}
+	/* End Global rules */
+	
+	/* Start body rules */
+	body {
+		background-image: linear-gradient(-225deg, orange 0%, #ca520d 100%);
+	background-image: linear-gradient(to top, #d66910 0%, #cf760f 100%);
+	background-attachment: fixed;
+	  background-repeat: no-repeat;
+	
+		font-family: 'Vibur', cursive;
+	/*   the main font */
+		font-family: 'Abel', sans-serif;
+	opacity: .95;
+	/* background-image: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%); */
 	}
 	
-	50%, 100% {
-		opacity: 1;
-		z-index: 5;
+	
+	
+	/* |||||||||||||||||||||||||||||||||||||||||||||*/
+	/* //////////////////////////////////////////// */
+	
+	
+	
+	
+	/* End body rules */
+	
+	/* Start form  attributes */
+	form {
+		width: 450px;
+		min-height: 500px;
+		height: auto;
+		border-radius: 5px;
+		margin: 2% auto;
+		box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
+		padding: 2%;
+		background-image: linear-gradient(-225deg, #d89140 50%, #f8dbc0 50%);
 	}
-}
-
-.overlay-container {
-	position: absolute;
-	top: 0;
-	left: 50%;
-	width: 50%;
-	height: 100%;
-	overflow: hidden;
-	transition: transform 0.6s ease-in-out;
-	z-index: 100;
-}
-
-.container.right-panel-active .overlay-container{
-	transform: translateX(-100%);
-}
-
-.overlay {
-	background: #ee8129;
-	background: -webkit-linear-gradient(to right, #070505, #d65d0c);
-	background: linear-gradient(to right, #1a1818, #fa7821);
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: 0 0;
-	color: #FFFFFF;
-	position: relative;
-	left: -100%;
-	height: 100%;
-	width: 200%;
-  	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
-}
-
-.container.right-panel-active .overlay {
-  	transform: translateX(50%);
-}
-
-.overlay-panel {
-	position: absolute;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	padding: 0 40px;
-	text-align: center;
-	top: 0;
-	height: 100%;
-	width: 50%;
-	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
-}
-
-.overlay-left {
-	transform: translateX(-20%);
-}
-
-.container.right-panel-active .overlay-left {
-	transform: translateX(0);
-}
-
-.overlay-right {
-	right: 0;
-	transform: translateX(0);
-}
-
-.container.right-panel-active .overlay-right {
-	transform: translateX(20%);
-}
-
-.social-container {
-	margin: 20px 0;
-}
-
-.social-container a {
-	border: 1px solid #DDDDDD;
-	border-radius: 50%;
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
-	margin: 0 5px;
-	height: 40px;
-	width: 40px;
-}
-
-footer {
-    background-color: #222;
-    color: #fff;
-    font-size: 14px;
-    bottom: 0;
-    position: fixed;
-    left: 0;
-    right: 0;
-    text-align: center;
-    z-index: 999;
-}
-
-footer p {
-    margin: 10px 0;
-}
-
-footer i {
-    color: red;
-}
-
-footer a {
-    color: #3c97bf;
-    text-decoration: none;
-}
-.button:hover{
-	background:orange;
-	color:#fff;
-  }
-
-.button{
-  font-size:18px;
-  text-decoration:none;
-  color:white;
-  border:black 1px solid;
-  background-color: #070505;
-  padding:10px 20px;
-  border-radius:10px;
-  margin-top:20px;
-}
-  
-
-</style>
-
-<h2>Sign in to Lou's List</h2>
-<div class="container" id="container">
-	<div class="form-container sign-up-container">
-		<form action="POST">
-			{% csrf_token %}
-			<h1>Create Account</h1>
-			<div class="social-container">
-				<a href="{% url 'social:begin' 'google-oauth2' %}" class="social"><i class="fab fa-google-plus-g"></i></a>
-			</div>
-		</form>
-	</div>
-	<div class="form-container sign-in-container">
-		<form action="">
-			{% csrf_token %}
-			<h1>Sign in</h1>
-			<div class="social-container">
-				<a href="{% url 'social:begin' 'google-oauth2' %}" class="social"><i class="fab fa-google-plus-g"></i></a>
-			</div>
-			<span>or use your account</span>
-			{{form.username}}
-			{{form.password}}
-			<a href="#">Forgot your password?</a>
-			<button name="button" class="col-md-12 btn btn-dark" id="login">Sign in</button>
-		</form>
-	</div>
-	<div class="overlay-container">
-		<div class="overlay">
-			<div class="overlay-panel overlay-right">
-				<h1>Hello fellow Wahoo!</h1>
-				<p>Don't have an account? No worries make one. </p>
-				<a class="button"  href="/register">Sign Up</a>
-			</div>
-		</div>
-	</div>
+	/* form Container */
+	form .con {
+		display: -webkit-flex;
+		display: flex;
+	  
+		-webkit-justify-content: space-around;
+		justify-content: space-around;
+	  
+		-webkit-flex-wrap: wrap;
+		flex-wrap: wrap;
+	  
+		  margin: 0 auto;
+	}
+	
+	/* the header form form */
+	header {
+		margin: 2% auto 10% auto;
+		text-align: center;
+	}
+	/* Login title form form */
+	header h2 {
+		font-size: 250%;
+		font-family: 'Playfair Display', serif;
+		color: #3e403f;
+	}
+	/*  A welcome message or an explanation of the login form */
+	header p {letter-spacing: 0.05em;}
+	
+	
+	
+	/* //////////////////////////////////////////// */
+	/* //////////////////////////////////////////// */
+	
+	
+	.input-item {
+		background: #fff;
+		color: #333;
+		padding: 14.5px 0px 15px 9px;
+		border-radius: 5px 0px 0px 5px;
+	}
+	
+	
+	
+	/* Show/hide password Font Icon */
+	#eye {
+		background: #fff;
+		color: #333;
+	  
+		margin: 5.9px 0 0 0;
+		margin-left: -20px;
+		padding: 15px 9px 19px 0px;
+		border-radius: 0px 5px 5px 0px;
+	  
+		float: right;
+		position: relative;
+		right: 1%;
+		top: -.2%;
+		z-index: 5;
+		
+		cursor: pointer;
+	}
+	/* inputs form  */
+	input[class="form-input"]{
+		width: 240px;
+		height: 50px;
+	  
+		margin-top: 2%;
+		padding: 15px;
+		
+		font-size: 16px;
+		font-family: 'Abel', sans-serif;
+		color: #5E6472;
+	  
+		outline: none;
+		border: none;
+	  
+		border-radius: 0px 5px 5px 0px;
+		transition: 0.2s linear;
+		
+	}
+	input[id="txt-input"] {width: 250px;}
+	/* focus  */
+	input:focus {
+		transform: translateX(-2px);
+		border-radius: 5px;
+	}
+	
+	/* //////////////////////////////////////////// */
+	/* //////////////////////////////////////////// */
+	
+	/* input[type="text"] {min-width: 250px;} */
+	/* buttons  */
+	button {
+		display: inline-block;
+		color: #252537;
+	  
+		width: 280px;
+		height: 50px;
+	  
+		padding: 0 20px;
+		background: #fff;
+		border-radius: 5px;
+		
+		outline: none;
+		border: none;
+	  
+		cursor: pointer;
+		text-align: center;
+		transition: all 0.2s linear;
+		
+		margin: 7% auto;
+		letter-spacing: 0.05em;
+	}
+	/* Submits */
+	.submits {
+		width: 48%;
+		display: inline-block;
+		float: left;
+		margin-left: 2%;
+	}
+	
+	/*       Forgot Password button FAF3DD  */
+	.frgt-pass {background: transparent;}
+	
+	/*     Sign Up button  */
+	.sign-up {background: #B8F2E6;}
+	
+	
+	/* buttons hover */
+	button:hover {
+		transform: translatey(3px);
+		box-shadow: none;
+	}
+	
+	/* buttons hover Animation */
+	button:hover {
+		animation: ani9 0.4s ease-in-out infinite alternate;
+	}
+	@keyframes ani9 {
+		0% {
+			transform: translateY(3px);
+		}
+		100% {
+			transform: translateY(5px);
+		}
+	}
+	</style>
+<div class="overlay">
+	<!-- LOGN IN FORM by Omar Dsoky -->
 	<form>
-</div>
+	   <!--   con = Container  for items in the form-->
+	   <div class="con">
+	   <!--     Start  header Content  -->
+	   <header class="head-form">
+		  <h2>Log In</h2>
+		  <!--     A welcome message or an explanation of the login form -->
+		  <p>login here using your username and password</p>
+	   </header>
+	   <!--     End  header Content  -->
+	   <br>
+	   <div class="field-set">
+		 
+		  <!--   user name -->
+			 <span class="input-item">
+			   <i class="fa fa-user-circle"></i>
+			 </span>
+			<!--   user name Input-->
+			 <input class="form-input" id="txt-input" type="text" placeholder="@UserName" required>
+		 
+		  <br>
+		 
+			   <!--   Password -->
+		 
+		  <span class="input-item">
+			<i class="fa fa-key"></i>
+		   </span>
+		  <!--   Password Input-->
+		  <input class="form-input" type="password" placeholder="Password" id="pwd"  name="password" required>
+		 
+	<!--      Show/hide password  -->
+		 <span>
+			<i class="fa fa-eye" aria-hidden="true"  type="button" id="eye"></i>
+		 </span>
+		 
+		 
+		  <br>
+	<!--        buttons -->
+	<!--      button LogIn -->
+		  <button class="login"> Log In </button>
+	   </div>
+	  
+	<!--   other buttons -->
+	   <div class="other">
+	<!--      Forgot Password button-->
+		  <button class="btn submits frgt-pass">Forgot Password</button>
+	<!--     Sign Up button -->
+		  <button href="\register" class="btn submits sign-up">Sign Up 
+	<!--         Sign Up font icon -->
+		  <i class="fa fa-user-plus" aria-hidden="true"></i>
+		  </button>
+	<!--      End Other the Division -->
+	   </div>
+		 
+	<!--   End Conrainer  -->
+	  </div>
+	  
+	  <!-- End Form -->
+	</form>
+	</div>
