--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -9,19 +9,24 @@
 <center>
     <br>
     <div style="padding-left:20px">
-        <!-- Search bar begin -->
-        <!-- https://stackoverflow.com/questions/62348625/append-input-from-search-box-into-button-link -->
-        <script>
-            function goToSearch() {
-                window.location.href = '/departments/' + encodeURI(document.getElementById("tag_search").value)
-            }
-        </script>
         <div class="search">
             <form role="search" method="get" id="search">
                 <div>
                     <p> <strong> Enter a department: </strong> </p>
                     <input type="text" value="" name="tag_search" id="tag_search" />
-                    <input type="button" value="Search" onclick="goToSearch()" />
+                    <input type="button" value="Search" id="search_button"
+                        onclick="window.location.href='/departments/' + encodeURI(document.getElementById('tag_search').value)" />
+                    <script>
+                        document.getElementById('tag_search').addEventListener("keypress", function (event) {
+                            // If the user presses the "Enter" key on the keyboard
+                            if (event.key === "Enter") {
+                                // Cancel the default action, if needed
+                                event.preventDefault();
+                                // Trigger the button element with a click
+                                document.getElementById("search_button").click();
+                            }
+                        });
+                    </script>
                 </div>
             </form>
         </div>
@@ -31,6 +36,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+
 </html>
 
 {% endblock content %}
