--- a/templates/search_users_page.html
+++ b/templates/search_users_page.html
@@ -6,34 +6,11 @@
 {% block content %}
 
 <html>
-<center>
-    <br>
-    <div style="padding-left:20px">
-        <p> This is working </p>
-        {% comment %} <div class="search">
-            <form role="search" method="get" id="search">
-                <div>
-                    <p> <strong> Enter a department: </strong> </p>
-                    <input type="text" value="" name="tag_search" id="tag_search" />
-                    <input type="button" value="Search" id="search_button"
-                        onclick="window.location.href='/departments/' + encodeURI(document.getElementById('tag_search').value.toUpperCase())" />
-                    <script>
-                        document.getElementById('tag_search').addEventListener("keypress", function (event) {
-                            // If the user presses the "Enter" key on the keyboard
-                            if (event.key === "Enter") {
-                                // Cancel the default action, if needed
-                                event.preventDefault();
-                                // Trigger the button element with a click
-                                document.getElementById("search_button").click();
-                            }
-                        });
-                    </script>
-                </div>
-            </form>
-        </div> {% endcomment %}
-        <!-- Search bar end -->
-    </div>
-</center>
+<h1> Search for a User </h1>
+
+<form action="{% url 'search_users_results_view' %}" method="get">
+    <input name="q" type="text" placeholder="Search..."/>
+</form>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
