--- a/templates/search_users_page.html
+++ b/templates/search_users_page.html
@@ -5,6 +5,14 @@
 {% load socialaccount %}
 {% block content %}
 
+<head>
+<style>
+    
+
+</style>
+
+</head>
+
 <html>
 <center>
 <h1> Search for a User </h1>
@@ -13,7 +21,7 @@
     <input name="q" type="text" placeholder="Search..."/>
 </form>
 
-<center>
+<center
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
