--- a/templates/search_users_results.html
+++ b/templates/search_users_results.html
@@ -5,14 +5,50 @@
 {% load socialaccount %}
 {% block content %}
 
+
+<head>
+<style>
+    .searchagain {
+        padding-bottom: 2em;
+        padding-top: 1em;
+    }
+    
+</style>
+    
+</head>
+
 <html>
-<ul>
-    {% for profile in object_list %}
-    <li>
-      {{ profile.user.username }}, {{profile.user.email}}, {{ profile.year }}
-    </li>
-  {% endfor %}
-</ul>
+<div class="container">
+    <div class="searchagain" >
+        <h2 > Search Again </h2>
+        <form action="{% url 'search_users_results_view' %}" method="get">
+            <input name="q" type="text" placeholder="Search..."/>
+        </form>
+    </div>
+    
+    <div>
+        <h5>Search Results</h5>
+        <div class='accordion' id="{{profile.user.username}}">
+            {% for profile in object_list %}
+            <div class='accordion-item'> 
+                <h2 class="accordion-header" id="{{ profile.user.username }}">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{forloop.counter}}" aria-expanded="true" aria-controls="collapse{{forloop.counter}}">
+                        {{ profile.user.username }}, {{profile.user.email}}, {{ profile.year }}
+                    </button>
+                </h2>
+                <div id="collapse{{forloop.counter}}" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#{{profile.user.username}}">
+                    <div class="accordion-body">
+                        <p> This would be freaking awesome if it worked</p>
+                    </div>
+                </div>
+            {% comment %} {{ profile.user.username }}, {{profile.user.email}}, {{ profile.year }} {% endcomment %}
+            </div>
+        {% endfor %}
+
+        </div>
+        
+    </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
