--- a/templates/login.html
+++ b/templates/login.html
@@ -232,7 +232,7 @@
 		  <br>
 	<!--        buttons -->
 	<!--      button LogIn -->
-		  <button class="login"> Log In </button>
+		  <button class="log-in"> Log In </button>
 	   </div>
 	  
 	<!--   other buttons -->
@@ -240,7 +240,7 @@
 	<!--      Forgot Password button-->
 		  <button class="btn submits frgt-pass">Forgot Password</button>
 	<!--     Sign Up button -->
-		  <button href="\register" class="btn submits sign-up">Sign Up 
+		  <button class="btn submits sign-up">Sign Up 
 	<!--         Sign Up font icon -->
 		  <i class="fa fa-user-plus" aria-hidden="true"></i>
 		  </button>
