--- a/templates/display_department.html
+++ b/templates/display_department.html
@@ -14,21 +14,28 @@
 <html>
 
 <body>
-    <div class="container">
+    <div class="container pt-4">
 
-        <h1> {{department}} Courses</h1>
+        <h1 class="mb-2"> {{department}} Courses</h1>
 
         {% for name, sections in data.items %}
             <ul class="list-group">
                 <li class="list-group-item active" aria-current="true"> {{name}}</li>
                 {%for section in sections%}
-                    <li class="list-group-item py-1">
-                        <div class="row">
+                    <li class="list-group-item py-0">
+                        <div class="row py-1">
                             <div class="col-1">{{section.course_number}}</div>
                             <div class="col-1">{{section.course_section}}</div>
                             <div class="col-2">{{section.component}} ({{section.units}} Units)</div>
                             <div class="col-1">{{section.enrollment_total}} / {{section.class_capacity}}</div>
                             <div class="col-3">{{section.instructor.name}}</div>
+                            <div class="col-1">
+
+                                <form action="{% url 'save_section' %}" method="post">
+                                    {% csrf_token %}
+                                    <button class="btn btn-primary py-0" name="section_to_save" type="submit" value={{section.course_number}}>Save</button>
+                                </form>
+                            </div>
 
                         </div>
                         
