--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -1,6 +1,3 @@
-<!-- Need to connect enter key to search bar -->
-<!-- Need to make search bar case insensitive -->
-
 {% extends 'base.html' %}
 {% load socialaccount %}
 {% block content %}
@@ -18,11 +15,8 @@
                         onclick="window.location.href='/departments/' + encodeURI(document.getElementById('tag_search').value.toUpperCase())" />
                     <script>
                         document.getElementById('tag_search').addEventListener("keypress", function (event) {
-                            // If the user presses the "Enter" key on the keyboard
                             if (event.key === "Enter") {
-                                // Cancel the default action, if needed
                                 event.preventDefault();
-                                // Trigger the button element with a click
                                 document.getElementById("search_button").click();
                             }
                         });
@@ -30,7 +24,44 @@
                 </div>
             </form>
         </div>
-        <!-- Search bar end -->
+        <br/>
+        <div class="search2">
+            <form role="search" method="get" id="search2">
+                <div>
+                    <p> <strong> Enter an instructor: </strong> </p>
+                    <input type="text" value="" name="tag_search2" id="tag_search2" />
+                    <input type="button" value="Search" id="search_button2"
+                        onclick="window.location.href='/instructors/' + encodeURI(document.getElementById('tag_search2').value)" />
+                    <script>
+                        document.getElementById('tag_search2').addEventListener("keypress", function (event) {
+                            if (event.key === "Enter") {
+                                event.preventDefault();
+                                document.getElementById("search_button2").click();
+                            }
+                        });
+                    </script>
+                </div>
+            </form>
+        </div>
+        <br/>
+        <div class="search3">
+            <form role="search" method="get" id="search3">
+                <div>
+                    <p> <strong> Enter a course catalog number: </strong> </p>
+                    <input type="text" value="" name="tag_search3" id="tag_search3" />
+                    <input type="button" value="Search" id="search_button3"
+                        onclick="window.location.href='/catalog_number/' + encodeURI(document.getElementById('tag_search3').value)" />
+                    <script>
+                        document.getElementById('tag_search3').addEventListener("keypress", function (event) {
+                            if (event.key === "Enter") {
+                                event.preventDefault();
+                                document.getElementById("search_button3").click();
+                            }
+                        });
+                    </script>
+                </div>
+            </form>
+        </div>
     </div>
 </center>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
