--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
                 </li>
                 <li class = "nav-item"><a class = "nav-link active" href="/profile/">Profile</a></li>
                 <li class = "nav-item"><a class = "nav-link active" href="/search/users/">Search Users</a></li>
-                <li class = "nav-item"><a class = "nav-link active" href="/search/saved_courses/">Saved Courses</a></li>
+                <li class = "nav-item"><a class = "nav-link active" href="/section/">Saved Courses</a></li>
                 <li class="nav-item"><a class="nav-link active" href="/departments/">Departments</a></li>
                  <li class="nav-item"><a class="nav-link active" href="{% url 'logout' %}">Sign Out</a></li>
             </ul>
