--- a/templates/display_department.html
+++ b/templates/display_department.html
@@ -24,14 +24,23 @@
                 {%for section in sections%}
                     <li class="list-group-item py-0">
                         <div class="row py-1">
-                            <div class="col-1">{{section.course_number}}</div>
-                            <div class="col-1">{{section.course_section}}</div>
-                            <div class="col-2">{{section.component}} ({{section.units}} Units)</div>
+                            <div class="col-1">{{section.course_number}}-{{section.course_section}}</div>
+                            <div class="col-1">{{section.units}} Unit {{section.component}}</div>
                             <div class="col-1">{{section.enrollment_total}} / {{section.class_capacity}}</div>
-                            <div class="col-3">{{section.instructor.name}}</div>
+                            <div class="col-2">{{section.instructor.name}}</div>
+                            <div class="col-3">
+                                {% for meeting in section.get_meetings%}
+                                    <div >{{meeting}}</div>
+                                {%endfor%}
+                            </div>
+                            <div class="col-3">
+                                {% for meeting in section.get_meetings%}
+                                    <div >{{meeting.facility_description}}</div>
+                                {%endfor%}
+                            </div>
                             <div class="col-1">
                                 {%if section in profile.saved_sections.all%}
-                                    <form action="{% url 'unsave_section' %}" method="post">
+                                    <form class="" action="{% url 'unsave_section' %}" method="post">
                                         {% csrf_token %}
                                         <input type="hidden" name="next" value="{{request.path}}"/>
                                         <button class="btn btn-outline-primary py-0" name="section_to_unsave" type="submit" value={{section.course_number}}>Unsave</button>
