--- a/templates/display_department.html
+++ b/templates/display_department.html
@@ -17,7 +17,8 @@
     <div class="container pt-4">
 
         <h1 class="mb-2"> {{department}} Courses</h1>
-
+        
+        {%if data.items%}
         {% for name, sections in data.items %}
             <ul class="list-group">
                 <li class="list-group-item active" aria-current="true"> {{name}}</li>
@@ -60,8 +61,10 @@
                 {%endfor%}
             </ul>
             <br/>
-
         {%endfor%}
+        {%else%}
+            <div class="text-danger"> No courses!</div>
+        {%endif%}
     </div>
 
 </body>
